# cainome

./: .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cainome.go  cainome_test.go  flake.nix  go.mod  go.sum  parser_config.json  test_go_generation.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  lint.yml  release.yml  test.yml  udeps.yml
cainomeup/: cainomeup  install
contracts/: .gitignore  Makefile  Scarb.toml
contracts/cairo0/: kkrt.abi.json  kkrt_account_cairo0.json  oz0.abi.json
contracts/src/: basic.cairo  event.cairo  gen.cairo  lib.cairo  simple_get_set.cairo
contracts/src/abicov/: builtins.cairo  byte_array.cairo  components.cairo  conflicting_events.cairo  enums.cairo  option_result.cairo  simple_events.cairo  simple_interface.cairo  simple_types.cairo  structs.cairo
crates/cairo-serde/: Cargo.toml  README.md
crates/cairo-serde-derive/: Cargo.toml  README.md
crates/cairo-serde-derive/src/: derive_enum.rs  derive_struct.rs  lib.rs
crates/cairo-serde/src/: call.rs  error.rs  lib.rs  serde_hex.rs
crates/cairo-serde/src/types/: array.rs  array_legacy.rs  boolean.rs  byte_array.rs  felt.rs  integers.rs  mod.rs  non_zero.rs  option.rs  result.rs  starknet.rs  tuple.rs  u256.rs
crates/cairo-test-artifacts/: Cargo.toml  README.md  build.rs
crates/cairo-test-artifacts/src/: generated_tests.rs  lib.rs
crates/cairo-test-artifacts/test_artifacts/: array_felt.json  array_u32.json  bool_false.json  bool_true.json  byte_array.json  byte_array_empty.json  eth_address.json  felt252.json  mixed_enum_variant1.json  option_none_felt.json  option_some_felt.json  result_err_u32.json  result_ok_felt.json  simple_enum_variant1.json  struct_with_struct.json  tuple_felt_u32.json  typed_enum_variant1.json  typed_enum_variant2.json  typed_enum_variant3.json  u128.json  u256.json  u256_large.json  u32.json  u64.json  u8.json
crates/parser/: Cargo.toml  README.md
crates/parser/src/: error.rs  lib.rs
crates/parser/src/abi/: conversions.rs  mod.rs  parser.rs  parser_legacy.rs
crates/parser/src/tokens/: array.rs  basic.rs  composite.rs  constants.rs  function.rs  genericity.rs  mod.rs  non_zero.rs  option.rs  result.rs  tuple.rs
crates/parser/test_data/: cairo_ls_abi.json  dojo_starter-directions_available.abi.json  struct_tuple.abi.json
crates/rs/: Cargo.toml  README.md
crates/rs-macro/: Cargo.toml  README.md
crates/rs-macro/src/: lib.rs  macro_inputs.rs  macro_inputs_legacy.rs  spanned.rs
crates/rs-macro/tests/: tests.rs
crates/rs-macro/tests/abigen/: duplicate_abi_type.rs  duplicate_abi_type.stderr  duplicate_alias_name.rs  duplicate_alias_name.stderr  unexpected_named_parameter.rs  unexpected_named_parameter.stderr
crates/rs/src/: execution_version.rs  lib.rs  macro_inputs.rs
crates/rs/src/expand/: contract.rs  enum.rs  event.rs  function.rs  mod.rs  struct.rs  types.rs  utils.rs
docs/: pre-commit.md
examples/: README.md  abigen_generate.rs  alias_skip.rs  byte_array.rs  cairo0.rs  cairo0_account.rs  cairo_serde_derive.rs  components_events.rs  exec_v3.rs  go_generate_example.go  json_abi.rs  opt_res.rs  rust_keyword.rs  simple_get_set.rs  simple_types.rs  structs.rs  typeshare.rs
examples/utils/: mod.rs
scripts/: clippy.sh  prettier.sh  test_all.sh
src/: cairo_serde_derive.rs  lib.rs
test_output/: dojo_starter_directions_available.go  struct_tuple.go
