[package]
name = "cainome"
version = "0.2.3"
edition = "2021"

[workspace]
members = [
    "crates/cairo-serde",
    "crates/parser",
    "crates/rs",
    "crates/rs-macro",
]

[workspace.dependencies]
# workspace crates
cainome-cairo-serde = { path = "crates/cairo-serde" }
cainome-parser = { path = "crates/parser" }
cainome-rs = { path = "crates/rs" }

anyhow = "1.0"
async-trait = "0.1.68"
camino = { version = "1.1.2", features = [ "serde1" ] }
convert_case = "0.6.0"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "1.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter", "json" ] }
url = "2.4.0"
starknet = "0.12.0"
starknet-types-core = "~0.1.4"

[patch.crates-io]
starknet-types-core = { git = "https://github.com/starknet-io/types-rs", rev = "f98f048" }

[dependencies]
camino.workspace = true
cainome-parser.workspace = true
cainome-cairo-serde.workspace = true
cainome-rs.workspace = true
cainome-rs-macro = { path = "crates/rs-macro", optional = true }

async-trait.workspace = true
anyhow.workspace = true
clap = { version = "4.2", features = [ "derive" ] }
clap_complete = "4.3"
convert_case.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
tokio = { version = "1.15.0", features = ["full"], optional = true }

[features]
default = []
abigen-rs = ["cainome-rs-macro"]
build-binary = ["tokio"]

[[bin]]
name = "cainome"
path = "src/bin/cli/main.rs"
required-features = ["build-binary"]
