[package]
name = "cainome"
version = "0.10.0"
edition = "2021"
authors = ["glihm <dev@glihm.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/cartridge-gg/cainome"
repository = "https://github.com/cartridge-gg/cainome"
homepage = "https://github.com/cartridge-gg/cainome"
description = """
Generate rust bindings for cairo contracts.
"""
keywords = ["cairo", "starknet", "web3"]
exclude = [".github/**", "images/**"]

[workspace]
members = [
	"crates/cairo-serde",
	"crates/cairo-serde-derive",
	"crates/parser",
	"crates/rs",
	"crates/rs-macro",
	"crates/cairo-test-artifacts",
]

[workspace.dependencies]
# workspace crates
cainome-cairo-serde = { version = "0.4.0", path = "crates/cairo-serde" }
cainome-cairo-serde-derive = { version = "0.1.0", path = "crates/cairo-serde-derive" }
cainome-parser = { version = "0.6.0", path = "crates/parser" }
cainome-rs = { version = "0.5.0", path = "crates/rs" }

anyhow = "1.0"
async-trait = "0.1"
num-bigint = "0.4.6"
camino = { version = "1.1", features = ["serde1"] }
convert_case = "0.8"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
# temp: change this to proper crates.io version
starknet = "0.17.0"
starknet-types-core = "0.2"

[dependencies]
camino.workspace = true
cainome-parser.workspace = true
cainome-cairo-serde.workspace = true
cainome-cairo-serde-derive.workspace = true
cainome-rs.workspace = true
cainome-rs-macro = { version = "0.5.0", path = "crates/rs-macro", optional = true }

async-trait.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
convert_case.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
tokio = { version = "1.40", features = ["full"], optional = true }

[dev-dependencies]
paste = "1.0"

[features]
default = []
abigen-rs = ["cainome-rs-macro"]
build-binary = ["tokio"]

[[bin]]
name = "cainome"
path = "src/bin/cli/main.rs"
required-features = ["build-binary"]
