[package]
name = "cainome-cairo-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_with = { version = "3.11.0", default-features = false }
num-bigint.workspace = true
