[package]
name = "cainome-cairo-serde"
version = "0.1.0"
edition = "2021"
authors = ["glihm <dev@glihm.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/cartridge-gg/cainome"
repository = "https://github.com/cartridge-gg/cainome"
homepage = "https://github.com/cartridge-gg/cainome"
description = """
A compile time library to serialize and deserialize cairo types to native rust types.
"""
keywords = ["cairo", "starknet", "web3"]
exclude = [".github/**", "images/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_with = { version = "3.11.0", default-features = false }
num-bigint.workspace = true
