[package]
name = "cairo-test-artifacts"
version = "0.1.0"
edition = "2021"
description = "Cairo serialization test artifacts and validation"
license = "MIT"

[dependencies]
starknet.workspace = true
serde_json = "1.0"
cainome-cairo-serde = { version = "0.4.0", path = "../cairo-serde" }
cainome = { version = "0.10.0", path = "../..", features = ["abigen-rs"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
serde_json = "1.0"

[features]
default = []
generator = []

[dev-dependencies]
