[package]
name = "cainome-parser"
version = "0.2.0"
edition = "2021"
authors = ["glihm <dev@glihm.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/cartridge-gg/cainome"
repository = "https://github.com/cartridge-gg/cainome"
homepage = "https://github.com/cartridge-gg/cainome"
description = """
A run-time library to generate an intermediate representation of Cairo ABI.
"""
keywords = ["cairo", "starknet", "web3"]
exclude = [".github/**", "images/**"]

[dependencies]
convert_case.workspace = true
starknet.workspace = true
thiserror.workspace = true
syn = { version = "2.0", features = [ "extra-traits" ]}
quote = "1.0"
serde_json.workspace = true
