[package]
name = "cainome-rs-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true         
starknet.workspace = true
cainome-cairo-serde.workspace = true
cainome-parser.workspace = true
cainome-rs.workspace = true
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
quote = "1.0"
syn = "2.0.15"
serde_json = "1.0.74"
thiserror.workspace = true
cainome-cairo-serde.workspace = true
