[package]
name = "cainome-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true         
starknet.workspace = true
cainome-parser.workspace = true
camino.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.15"
serde_json = "1.0.74"
thiserror.workspace = true
cainome-cairo-serde.workspace = true
prettyplease = "0.2.19"
