[package]
name = "cainome-rs"
version = "0.2.0"
edition = "2021"
authors = ["glihm <dev@glihm.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/cartridge-gg/cainome"
repository = "https://github.com/cartridge-gg/cainome"
homepage = "https://github.com/cartridge-gg/cainome"
description = """
A run-time library to generate rust bindings for cairo contracts.
"""
keywords = ["cairo", "starknet", "web3"]
exclude = [".github/**", "images/**"]

[dependencies]
anyhow.workspace = true         
starknet.workspace = true
cainome-parser.workspace = true
camino.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.15"
serde_json = "1.0.74"
thiserror.workspace = true
cainome-cairo-serde.workspace = true
prettyplease = "0.2.19"
